--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,28 +16,25 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# development
+/.idea/
+
+# env files (can opt-in for committing if needed)
+.env*
 
 # next.js
 /.next/
 /out/
 
-# production
-/build
-
 # misc
 .DS_Store
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# prisma
+/generated/prisma
 
-# env files (can opt-in for committing if needed)
-.env*
+# production
+/build
 
 # vercel
 .vercel
@@ -39,6 +42,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# development
-/.idea/
