--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format:ci": "prettier --check .",
     "format:fix": "prettier --write . --ignore-unknown",
     "postinstall": "prisma generate",
-    "start": "pnpm db:dev:migrate && next start",
+    "start": "pnpm db:prod:migrate && next start",
     "test": "jest",
     "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
   },
