--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint:strict": "eslint . --ext .ts,.tsx --max-warnings 0",
     "db:dev:migrate": "prisma migrate dev",
     "db:dev:studio": "prisma studio",
+    "db:generate": "prisma generate",
     "db:prod:migrate": "prisma migrate deploy",
     "db:seed": "pnpx ts-node --compiler-options '{\"module\":\"commonjs\"}' prisma/seed/main.ts",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
     "format:fix": "prettier --write . --ignore-unknown",
-    "postinstall": "prisma generate",
-    "start": "pnpm db:prod:migrate && next start",
+    "start": "next start",
     "test": "jest",
     "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
   },
