--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.37.5",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.12.0",
