--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: pnpm format:ci
 
       - name: Run tests and generate JUnit report
-        run: pnpm test
+        run: pnpm test:ci
 
       - name: Upload test report
         uses: actions/upload-artifact@v4
