--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,6 @@ jobs:
       - name: 'Verify formatting'
         run: pnpm format:ci
 
-      - name: 'Verify formatting'
-        run: pnpm format:ci
-
       - name: Run tests and generate JUnit report
         run: pnpm test:ci
 
@@ -56,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: junit-report
-          path: ./test-results/junit.xml
+          path: ./junit.xml
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -80,6 +77,9 @@ jobs:
 
       - name: Prisma migrate
         run: pnpm db:dev:migrate
+
+      - name: Prisma generate
+        run: pnpm db:generate
 
       - name: DB seed
         run: pnpm db:seed
